--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,9 @@ services:
             POSTGRES_PASSWORD: main
             POSTGRES_DB: main
         ports: [5432]
+
+    ###> symfony/mailer ###
+    mailer:
+      image: schickling/mailcatcher
+      ports: [1025, 1080]
+###< symfony/mailer ###
