--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
-        "doctrine/doctrine-bundle": "^2.5",
-        "doctrine/doctrine-migrations-bundle": "^3.2",
-        "doctrine/orm": "^2.10",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.9",
         "easycorp/easyadmin-bundle": "^3",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/cache": "5.2.*",
@@ -29,6 +29,7 @@
         "symfony/string": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
+        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/workflow": "5.2.*",
         "symfony/yaml": "5.2.*",
         "twig/cssinliner-extra": "^3",
@@ -38,8 +39,15 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.2.*",
+        "symfony/css-selector": "5.2.*",
         "symfony/debug-bundle": "5.2.*",
-        "symfony/maker-bundle": "^1.36",
+        "symfony/maker-bundle": "^1.33",
+        "symfony/panther": "^1.1",
+        "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "5.2.*",
         "symfony/web-profiler-bundle": "5.2.*"
     },
@@ -82,7 +90,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "5.2.*"
         }
     }
