--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/security-bundle": "5.2.*",
         "symfony/string": "5.2.*",
+        "symfony/translation": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
         "symfony/webpack-encore-bundle": "^1.12",
@@ -38,6 +39,7 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/inky-extra": "^3",
         "twig/intl-extra": "^3",
+        "twig/string-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
